{
  "version": 4,
  "terraform_version": "1.16.1",
  "serial": 254,
  "lineage": "54382eb0-ea38-3c81-6cbc-f28a1dc1ad31",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:925047940866:loadbalancer/app/std01-ex10-alb/fd0c6fa156c9b78d",
            "arn_suffix": "app/std01-ex10-alb/fd0c6fa156c9b78d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "std01-ex10-alb-1657914656.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:925047940866:loadbalancer/app/std01-ex10-alb/fd0c6fa156c9b78d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "std01-ex10-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-02975db74aa51ef14"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01c5cbe678dfdba71"
              },
              {
                "subnet_id": "subnet-03b2c0a616c4d3b5f"
              },
              {
                "subnet_id": "subnet-0a422cc9ab2e1d0ad"
              }
            ],
            "subnets": [
              "subnet-01c5cbe678dfdba71",
              "subnet-03b2c0a616c4d3b5f",
              "subnet-0a422cc9ab2e1d0ad"
            ],
            "tags": {
              "Name": "std01-ex10-alb"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-alb",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy"
            },
            "vpc_id": "vpc-0d3600f41d6b330a2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:925047940866:loadbalancer/app/std01-ex10-alb/fd0c6fa156c9b78d"
          },
          "dependencies": [
            "module.network.aws_security_group.alb_sg",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_subnet.public_1c",
            "module.network.aws_subnet.public_1d",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:925047940866:listener/app/std01-ex10-alb/fd0c6fa156c9b78d/fcfb911dd04c8ee1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:925047940866:targetgroup/std01-ex10-tg/b37bfe3d6cb6f0cb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:925047940866:listener/app/std01-ex10-alb/fd0c6fa156c9b78d/fcfb911dd04c8ee1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:925047940866:loadbalancer/app/std01-ex10-alb/fd0c6fa156c9b78d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Env": "test",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:925047940866:listener/app/std01-ex10-alb/fd0c6fa156c9b78d/fcfb911dd04c8ee1"
          },
          "dependencies": [
            "module.alb.aws_lb.app_alb",
            "module.alb.aws_lb_target_group.app_tg",
            "module.network.aws_security_group.alb_sg",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_subnet.public_1c",
            "module.network.aws_subnet.public_1d",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:925047940866:targetgroup/std01-ex10-tg/b37bfe3d6cb6f0cb",
            "arn_suffix": "targetgroup/std01-ex10-tg/b37bfe3d6cb6f0cb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:925047940866:targetgroup/std01-ex10-tg/b37bfe3d6cb6f0cb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "std01-ex10-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "std01-ex10-tg"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-tg",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:925047940866:targetgroup/std01-ex10-tg/b37bfe3d6cb6f0cb"
          },
          "dependencies": [
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8c17c4a29027bee",
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:elastic-ip/eipalloc-0a8c17c4a29027bee",
            "domain": "vpc",
            "id": "eipalloc-0a8c17c4a29027bee",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-73-148-68.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.73.148.68",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "std01-ex10-nat-eip"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-nat-eip",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "eipalloc-0a8c17c4a29027bee",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ex10_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:internet-gateway/igw-01dc461f939b7dd5a",
            "id": "igw-01dc461f939b7dd5a",
            "owner_id": "925047940866",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "std01-ex10-igw"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-igw",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy"
            },
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "igw-01dc461f939b7dd5a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8c17c4a29027bee",
            "association_id": "eipassoc-054ac634f7510f867",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0f1c0c6e7781c5652",
            "network_interface_id": "eni-057a70ddd476c0b28",
            "private_ip": "10.10.1.230",
            "public_ip": "35.73.148.68",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01c5cbe678dfdba71",
            "tags": {
              "Name": "std01-ex10-nat-gateway"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-nat-gateway",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy"
            },
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "nat-0f1c0c6e7781c5652",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.ex10_igw",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:route-table/rtb-05e9c16e77817b527",
            "id": "rtb-05e9c16e77817b527",
            "owner_id": "925047940866",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "std01-ex10-db-rt"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-db-rt",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "rtb-05e9c16e77817b527",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:route-table/rtb-07cf2cc2692497781",
            "id": "rtb-07cf2cc2692497781",
            "owner_id": "925047940866",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f1c0c6e7781c5652",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "std01-ex10-private-rt"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-private-rt",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "rtb-07cf2cc2692497781",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.ex10_igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:route-table/rtb-083ac28e460af7f57",
            "id": "rtb-083ac28e460af7f57",
            "owner_id": "925047940866",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01dc461f939b7dd5a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "std01-ex10-public-rt"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-public-rt",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "rtb-083ac28e460af7f57",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.ex10_igw",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022478c833ebf854a",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-05e9c16e77817b527",
            "subnet_id": "subnet-0946afe0f8f7669bf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "rtbassoc-022478c833ebf854a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_route_table.db_rt",
            "module.network.aws_subnet.db_1a",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0477ddda259d75a5e",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-05e9c16e77817b527",
            "subnet_id": "subnet-0bc91f3e9b5f39732"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "rtbassoc-0477ddda259d75a5e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_route_table.db_rt",
            "module.network.aws_subnet.db_1c",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fcb9d562596f004",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-05e9c16e77817b527",
            "subnet_id": "subnet-0b340060cc0009f1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "rtbassoc-09fcb9d562596f004",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_route_table.db_rt",
            "module.network.aws_subnet.db_1d",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035e2ec4c08693884",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-07cf2cc2692497781",
            "subnet_id": "subnet-01bda0d8ae04a3664"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "rtbassoc-035e2ec4c08693884",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.ex10_igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.private_1a",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc0bd05b4dc2047d",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-07cf2cc2692497781",
            "subnet_id": "subnet-080074925c2ed7eeb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "rtbassoc-0fc0bd05b4dc2047d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.ex10_igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.private_1c",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1743dce72dd39bd",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-07cf2cc2692497781",
            "subnet_id": "subnet-0f1af5a725e5212cf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "rtbassoc-0c1743dce72dd39bd",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.ex10_igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.private_1d",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f458d78bccba2ce",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-083ac28e460af7f57",
            "subnet_id": "subnet-01c5cbe678dfdba71"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "rtbassoc-01f458d78bccba2ce",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.ex10_igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002c6bbd0fd9d2a48",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-083ac28e460af7f57",
            "subnet_id": "subnet-03b2c0a616c4d3b5f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "rtbassoc-002c6bbd0fd9d2a48",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.ex10_igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_1c",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb4eca1b38e333fb",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-083ac28e460af7f57",
            "subnet_id": "subnet-0a422cc9ab2e1d0ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "rtbassoc-0bb4eca1b38e333fb",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.ex10_igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_1d",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:security-group/sg-02975db74aa51ef14",
            "description": "Security Group for ex10 ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02975db74aa51ef14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "std01-ex10-alb-sg",
            "name_prefix": "",
            "owner_id": "925047940866",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "std01-ex10-alb-sg"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-alb-sg",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "sg-02975db74aa51ef14",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:security-group/sg-04e5b31d1f34e3ae3",
            "description": "Security Group for ex10 private ASG instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e5b31d1f34e3ae3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02975db74aa51ef14"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "std01-ex10-asg-sg",
            "name_prefix": "",
            "owner_id": "925047940866",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "std01-ex10-asg-sg"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-asg-sg",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "sg-04e5b31d1f34e3ae3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_security_group.alb_sg",
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:subnet/subnet-0946afe0f8f7669bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0946afe0f8f7669bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925047940866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "std01-ex10-db-1a-subnet",
              "Type": "db"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-db-1a-subnet",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy",
              "Type": "db"
            },
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "subnet-0946afe0f8f7669bf",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:subnet/subnet-0bc91f3e9b5f39732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc91f3e9b5f39732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925047940866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "std01-ex10-db-1c-subnet",
              "Type": "db"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-db-1c-subnet",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy",
              "Type": "db"
            },
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "subnet-0bc91f3e9b5f39732",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:subnet/subnet-0b340060cc0009f1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.10.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b340060cc0009f1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925047940866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "std01-ex10-db-1d-subnet",
              "Type": "db"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-db-1d-subnet",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy",
              "Type": "db"
            },
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "subnet-0b340060cc0009f1e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:subnet/subnet-01bda0d8ae04a3664",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bda0d8ae04a3664",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925047940866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "std01-ex10-private-1a-subnet",
              "Type": "private"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-private-1a-subnet",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy",
              "Type": "private"
            },
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "subnet-01bda0d8ae04a3664",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:subnet/subnet-080074925c2ed7eeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080074925c2ed7eeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925047940866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "std01-ex10-private-1c-subnet",
              "Type": "private"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-private-1c-subnet",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy",
              "Type": "private"
            },
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "subnet-080074925c2ed7eeb",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:subnet/subnet-0f1af5a725e5212cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.10.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1af5a725e5212cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925047940866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "std01-ex10-private-1d-subnet",
              "Type": "private"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-private-1d-subnet",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy",
              "Type": "private"
            },
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "subnet-0f1af5a725e5212cf",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:subnet/subnet-01c5cbe678dfdba71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c5cbe678dfdba71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925047940866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "std01-ex10-public-1a-subnet",
              "Type": "public"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-public-1a-subnet",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy",
              "Type": "public"
            },
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "subnet-01c5cbe678dfdba71",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:subnet/subnet-03b2c0a616c4d3b5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b2c0a616c4d3b5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925047940866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "std01-ex10-public-1c-subnet",
              "Type": "public"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-public-1c-subnet",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy",
              "Type": "public"
            },
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "subnet-03b2c0a616c4d3b5f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:subnet/subnet-0a422cc9ab2e1d0ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a422cc9ab2e1d0ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925047940866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "std01-ex10-public-1d-subnet",
              "Type": "public"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-public-1d-subnet",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy",
              "Type": "public"
            },
            "vpc_id": "vpc-0d3600f41d6b330a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "subnet-0a422cc9ab2e1d0ad",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.ex10_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ex10_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:925047940866:vpc/vpc-0d3600f41d6b330a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08d61e6636212df2c",
            "default_route_table_id": "rtb-082ad4e247ca5509b",
            "default_security_group_id": "sg-06d76de9bcbc5aad4",
            "dhcp_options_id": "dopt-09d5e833a8c2c2f60",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d3600f41d6b330a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082ad4e247ca5509b",
            "owner_id": "925047940866",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "std01-ex10-vpc"
            },
            "tags_all": {
              "Env": "test",
              "Name": "std01-ex10-vpc",
              "Owner": "std01",
              "Project": "ex10-asg-codedeploy"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "925047940866",
            "id": "vpc-0d3600f41d6b330a2",
            "region": "ap-northeast-1"
          }
        }
      ]
    }
  ]
}